# lc_rag

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  entrypoint.sh  pyproject.toml  streamlit_app.py
agent/: graph.py
evaluation/: eval_checkpoint.json  gt_manual_checklist.txt  metrics.py  results.csv  run_eval.py  run_experiment.py  test_set.json
evaluation/experiments/exp01_baseline_flashrank/: config.json  results.csv  summary.json
evaluation/experiments/exp02_cohere_reranker/: config.json  results.csv  summary.json
evaluation/experiments/exp03_hyde_retrieval/: config.json  summary.json
generation/: generator.py
ingestion/: chunker.py  embedder.py  ingest.py  pdf_parser.py
retrieval/: hybrid_search.py  hyde.py  query_analyzer.py  reranker.py
