[project]
name = "sec-rag"
version = "0.1.0"
description = "SEC Filings RAG knowledge base for publicly traded companies"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "voyageai>=0.3.0",
    "flashrank>=0.2.9",
    "qdrant-client>=1.11.0",
    "rank-bm25>=0.2.2",
    "pymupdf>=1.24.0",
    "pymupdf4llm>=0.0.17",
    "pdfplumber>=0.11.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "tiktoken>=0.7.0",
    "streamlit>=1.39.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "cohere>=6.1.0",
]
